syntax = "proto3";

package batch;

option java_package = "org.kreps.iotdb.protos";
option java_multiple_files = true;

message DataRequest {
    string measurement = 1;
    string startDate = 2;
    string endDate = 3;
}

message DataResponse {
    bytes points = 1;
}

service Sender {
    rpc getData(DataRequest) returns (stream DataResponse) {}
}